[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Shit.gd" type="Script" id=1]
[ext_resource path="res://Pic/shit/shit.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.4649, 52.7263 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.2652, 63.7084 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.899, 63.4923 )

[node name="Shit" type="Node2D"]
script = ExtResource( 1 )

[node name="shit" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_mask = 3
mode = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PoolVector2Array( -8.24637, -32.3801, -8.35839, -64.0257, 8.4239, -64.0257, 8.43554, -32.2362, 16.4193, -32.2577, 16.4145, -24.2918, 32.9304, -24.2918, 32.9191, -15.0349, 16.44, -15.0345, 16.44, 0.283653, 24.4493, 0.283653, 24.4434, 32.5378, 16.4214, 32.5378, 16.4277, 48.5751, 7.99191, 48.558, 7.99191, 64.0162, -8.38639, 64.0162, -8.38639, 48.374, -16.1263, 48.3883, -16.0705, 32.5503, -24.1779, 32.5618, -24.1912, 0.191014, -16.1537, 0.169917, -16.0387, -15.0194, -32.2928, -15.0194, -32.3203, -24.0893, -15.9792, -24.0692, -16.0519, -32.3801 )

[node name="TurnSensor" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnSensor"]
position = Vector2( 2.38399, -117.66 )
shape = SubResource( 1 )

[node name="leftSensor" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftSensor"]
position = Vector2( -85.9892, -143.701 )
shape = SubResource( 2 )

[node name="RightSensor" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSensor"]
position = Vector2( 88.5343, -144.035 )
shape = SubResource( 3 )
[connection signal="body_entered" from="TurnSensor" to="." method="_on_TurnSensor_body_entered"]
[connection signal="body_exited" from="TurnSensor" to="." method="_on_TurnSensor_body_exited"]
[connection signal="body_entered" from="leftSensor" to="." method="_on_leftSensor_body_entered"]
[connection signal="body_exited" from="leftSensor" to="." method="_on_leftSensor_body_exited"]
[connection signal="body_entered" from="RightSensor" to="." method="_on_RightSensor_body_entered"]
[connection signal="body_exited" from="RightSensor" to="." method="_on_RightSensor_body_exited"]
